--- a/src/iOS/CognitiveEye.iOS.csproj
+++ b/src/iOS/CognitiveEye.iOS.csproj
@@ -36,14 +36,14 @@
     <OutputPath>bin\iPhone\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodesignKey>iPhone Developer: Adam Lepley (MDZDXYZPC8)</CodesignKey>
+    <CodesignKey>iPhone Distribution: PSC Group, LLC</CodesignKey>
     <MtouchFloat32>true</MtouchFloat32>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>SdkOnly</MtouchLink>
     <MtouchArch>ARM64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
-    <CodesignProvision>VS: com.psclistens.cognitiveeye Development</CodesignProvision>
+    <CodesignProvision>CognitiveEyeAdHock</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>pdbonly</DebugType>
