--- a/src/CongnitiveEye.Forms/CongnitiveEye.Forms.csproj
+++ b/src/CongnitiveEye.Forms/CongnitiveEye.Forms.csproj
@@ -36,6 +36,7 @@
     <Folder Include="ControlTemplates\" />
     <Folder Include="Models\" />
     <Folder Include="Controls\" />
+    <Folder Include="Views\Controls\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Navigation\INavigationService.cs" />
