--- a/src/iOS/CognitiveEye.iOS.csproj
+++ b/src/iOS/CognitiveEye.iOS.csproj
@@ -311,6 +311,8 @@
     <BundleResource Include="Resources\sampleCameraPic.jpg" />
     <BundleResource Include="Resources\sampleCameraPic%402x.jpg" />
     <BundleResource Include="Resources\sampleCameraPic%403x.jpg" />
+    <BundleResource Include="Resources\settings.svg" />
+    <BundleResource Include="Resources\info.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.5.0.280555\build\netstandard1.0\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.5.0.280555\build\netstandard1.0\Xamarin.Forms.targets')" />
